--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "eslint --cache --cache-strategy content --report-unused-disable-directives .",
     "ts-check": "tsc",
     "test": "vitest",
-    "prepublishOnly": "pnpm run clean && pnpm install && pnpm run build",
-    "preflight": "pnpm install && run-s format lint build test ts-check"
+    "prepublishOnly": "npm install pnpm && pnpm run clean && pnpm install && pnpm run build",
+    "preflight": "npm install pnpm && pnpm install && run-s format lint build test ts-check"
   },
   "type": "module",
   "files": [
