--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@gtm-support/vue-gtm",
+  "name": "@fixed-gtm-support/vue-gtm",
   "version": "2.2.1",
-  "description": "Simple implementation of Google Tag Manager for Vue",
+  "description": "Simple implementation of Google Tag Manager for Vue - fixed version",
   "scripts": {
     "clean": "rimraf coverage .eslintcache dist pnpm-lock.yaml node_modules",
     "build:clean": "rimraf dist",
